# BostonHacks

./: Makefile  README.md  requirements.txt
Foldit_Web_Spec/: 01_MASTER_SPEC.md  02_SCORE_MATH.md  03_FEATURE_DICT.md  04_API_CONTRACT.md  05_LEVEL_SCHEMA.json  07_ACCEPTANCE_TESTS.md  08_TASKS_BOARD.md  09_CODE_GUIDE.md
Foldit_Web_Spec/10_DATA_SAMPLES/: synthetic_deltas.csv  target_contacts.json  target_ss.json
app/: __init__.py
app/data/levels/: level_0001.json  levels_index.json
app/data/submissions/: level_0001.jsonl
app/frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/app/levels/: page.tsx
app/frontend/app/play/: page.tsx
app/frontend/components/: AINudgeButton.tsx  AINudgeTooltip.tsx  PlayScreen.tsx  ProteinViewer.tsx  ResidueHeatmapOverlay.tsx  ResiduePanel.tsx  ScoreBars.tsx  SubmitButton.tsx  TermDeltaPills.tsx
app/frontend/lib/: api.ts  structures.ts
app/frontend/public/levels/: level_0001_start.json
app/frontend/workers/: scoreWorker.ts
app/levels/: README.md
app/server/: __init__.py  api.py  features.py  levels.py  main.py  nudge.py  pyproject.toml  routes_levels.py  routes_submit.py  score.py  score_math.py  scoring.py  state.py  stateful.py  submissions.py  train_delta_score.py
app/tests/: README.md  conftest.py  test_clash.py  test_compactness.py  test_features.py  test_hbond.py  test_incremental.py  test_leaderboard.py  test_levels.py  test_nudge.py  test_ramachandran.py  test_rotamer.py  test_ss.py  test_submit.py
(+2 files in other folders)
