[project]
name = "foldit-server"
version = "0.1.0"
description = "FastAPI scaffold for the FoldIt web backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<0.112.0",
  "uvicorn[standard]>=0.29.0,<0.30.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
